Added color panel

--- a/etch a sketch/index.html
+++ b/etch a sketch/index.html
@@ -16,7 +16,31 @@
             <input type="radio" name="choice" id="Pen" class="choice"> Pencil <br>
             <input type="radio" name="choice" id="Ere" class="choice"> Ereaser <br>
             <input type="button" value="Erease all" id="btn">
+
+            <div id="colorPaleteControl">
+                <div id="colorPalete"> 
+                    <div class="colors" id="black"></div> 
+                    <div class="colors" id="blue"></div>
+                    <div class="colors" id="green"></div> 
+                </div>
+                <div id="colorPalete"> 
+                    <div class="colors" id="red"></div> 
+                    <div class="colors" id="gray"></div>
+                    <div class="colors" id="pink"></div> 
+                </div>
+                <div id="colorPalete"> 
+                    <div class="colors" id="yellow"></div> 
+                    <div class="colors" id="purple"></div>
+                    <div class="colors" id="orange"></div> 
+                </div>
+            </div>
+
+            <div id="mainColor"></div>
+            <div><h2>Current Color</h2></div>
+            
         </div>
+
+        
 
         <div class="box" id="box2">
 
